Add age_at_loan feature (needs fix!)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
         "%load_ext autoreload",
         "%autoreload 2"
     ],
-    "csv-preview.separator": ";"
+    "csv-preview.separator": ";",
+    "python.formatting.provider": "yapf"
 }
