--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
         "%autoreload 2"
     ],
     "csv-preview.separator": ";",
-    "python.formatting.provider": "yapf"
+    "python.formatting.provider": "autopep8"
 }
